--- a/Clean-Reader/Clean-Reader.csproj
+++ b/Clean-Reader/Clean-Reader.csproj
@@ -18,7 +18,7 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <PackageCertificateThumbprint>09845A784F504346A2D9453CAB0242C0E3AFBBA3</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>19DE3251AB16B9B0D867892B047B3BB7FF135FF9</PackageCertificateThumbprint>
     <PackageCertificateKeyFile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -127,8 +127,23 @@
     <Compile Include="Controls\Components\BookCover.xaml.cs">
       <DependentUpon>BookCover.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Components\BookSlimCard.xaml.cs">
+      <DependentUpon>BookSlimCard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Components\ColorConfigPanel.xaml.cs">
+      <DependentUpon>ColorConfigPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Components\ColorDisplayBlock.xaml.cs">
+      <DependentUpon>ColorDisplayBlock.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Components\FontPanel.xaml.cs">
+      <DependentUpon>FontPanel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Components\NavigateMenu.xaml.cs">
       <DependentUpon>NavigateMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Components\ReaderBar.xaml.cs">
+      <DependentUpon>ReaderBar.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Components\SyncAccountBlock.xaml.cs">
       <DependentUpon>SyncAccountBlock.xaml</DependentUpon>
@@ -148,14 +163,19 @@
     <Compile Include="Models\Core\AppViewModel.cs" />
     <Compile Include="Models\Core\AppViewModel.Methods.cs" />
     <Compile Include="Models\Core\AppViewModel.Properties.cs" />
+    <Compile Include="Models\Core\AppViewModel.Reader.cs" />
     <Compile Include="Models\Core\AppViewModel.Shelf.cs" />
     <Compile Include="Models\Core\AppViewModel.Yuenov.cs" />
     <Compile Include="Models\Enums\MenuItemType.cs" />
+    <Compile Include="Models\UI\BrushConverter.cs" />
     <Compile Include="Models\UI\CustomResourceLoader.cs" />
+    <Compile Include="Models\UI\LevelFontWeightConverter.cs" />
     <Compile Include="Models\UI\LevelMarginConverter.cs" />
     <Compile Include="Models\UI\MenuItem.cs" />
+    <Compile Include="Models\UI\ReaderColorConfig.cs" />
     <Compile Include="Models\UI\SearchResult.cs" />
     <Compile Include="Models\UI\SearchResultSelector.cs" />
+    <Compile Include="Models\UI\StaticUIExtension.cs" />
     <Compile Include="Pages\CategoryPage.xaml.cs">
       <DependentUpon>CategoryPage.xaml</DependentUpon>
     </Compile>
@@ -260,7 +280,27 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\Components\BookSlimCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Components\ColorConfigPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Components\ColorDisplayBlock.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Components\FontPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Components\NavigateMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Components\ReaderBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -352,8 +392,11 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>6.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml">
+      <Version>2.4.3</Version>
+    </PackageReference>
     <PackageReference Include="Richasy.Controls.ReaderPanel">
-      <Version>0.0.5</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.UWP">
       <Version>1.1.3</Version>
