--- a/Clean-Reader/Clean-Reader.csproj
+++ b/Clean-Reader/Clean-Reader.csproj
@@ -151,8 +151,14 @@
     <Compile Include="Controls\Components\IconTextBlock.xaml.cs">
       <DependentUpon>IconTextBlock.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Components\InsideSearchBlock.xaml.cs">
+      <DependentUpon>InsideSearchBlock.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Components\NavigateMenu.xaml.cs">
       <DependentUpon>NavigateMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Components\OtherOptionPanel.xaml.cs">
+      <DependentUpon>OtherOptionPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Components\ReaderBar.xaml.cs">
       <DependentUpon>ReaderBar.xaml</DependentUpon>
@@ -177,6 +183,9 @@
     </Compile>
     <Compile Include="Controls\Layout\HorizontalBookPanel.xaml.cs">
       <DependentUpon>HorizontalBookPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Layout\InsideSearchPanel.xaml.cs">
+      <DependentUpon>InsideSearchPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Layout\SidePanel.xaml.cs">
       <DependentUpon>SidePanel.xaml</DependentUpon>
@@ -355,7 +364,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\Components\InsideSearchBlock.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Components\NavigateMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Components\OtherOptionPanel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -388,6 +405,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Layout\HorizontalBookPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Layout\InsideSearchPanel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -491,7 +512,7 @@
       <Version>2.4.3</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.ReaderPanel">
-      <Version>1.0.5</Version>
+      <Version>1.0.7</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.UWP">
       <Version>1.1.3</Version>
