--- a/Clean-Reader/Clean-Reader.csproj
+++ b/Clean-Reader/Clean-Reader.csproj
@@ -154,6 +154,9 @@
     <Compile Include="Controls\Components\InsideSearchBlock.xaml.cs">
       <DependentUpon>InsideSearchBlock.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Components\MusicPlayer.xaml.cs">
+      <DependentUpon>MusicPlayer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Components\NavigateMenu.xaml.cs">
       <DependentUpon>NavigateMenu.xaml</DependentUpon>
     </Compile>
@@ -210,6 +213,7 @@
     <Compile Include="Models\UI\ReaderColorConfig.cs" />
     <Compile Include="Models\UI\SearchResult.cs" />
     <Compile Include="Models\UI\SearchResultSelector.cs" />
+    <Compile Include="Models\UI\SpeechTransportControls.cs" />
     <Compile Include="Models\UI\StaticUIExtension.cs" />
     <Compile Include="Models\UI\WebBookCoverConverter.cs" />
     <Compile Include="Pages\CategoryPage.xaml.cs">
@@ -373,6 +377,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\Components\MusicPlayer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Components\NavigateMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -485,6 +493,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Template\Media.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Template\Single.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -517,7 +529,7 @@
       <Version>2.4.3</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.ReaderPanel">
-      <Version>1.1.0</Version>
+      <Version>1.1.1</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.UWP">
       <Version>1.1.3</Version>
